added REST API Wrappers